// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parse translators XMLTranslator should translate $response.body.data[0].id > 10 to XML 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<root nodes="7" characters="30">
<!-- input string -->
  $response.body.data[0].id > 10
 <node name="condition" index="0" length="30">
   $response.body.data[0].id > 10
  <node name="logical-or-expr" index="0" length="30">
    $response.body.data[0].id > 10
   <node name="logical-and-expr" index="0" length="30">
     $response.body.data[0].id > 10
    <node name="comparison-expr" index="0" length="30">
      $response.body.data[0].id > 10
     <node name="runtime-expression-operand" index="0" length="25">
       $response.body.data[0].id
     </node><!-- name="runtime-expression-operand" -->
     <node name="comparison-op" index="26" length="1">
       >
     </node><!-- name="comparison-op" -->
     <node name="number" index="28" length="2">
       10
     </node><!-- name="number" -->
    </node><!-- name="comparison-expr" -->
   </node><!-- name="logical-and-expr" -->
  </node><!-- name="logical-or-expr" -->
 </node><!-- name="condition" -->
</root>
"
`;

exports[`parse translators XMLTranslator should translate $statusCode == 200 to XML 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<root nodes="7" characters="18">
<!-- input string -->
  $statusCode == 200
 <node name="condition" index="0" length="18">
   $statusCode == 200
  <node name="logical-or-expr" index="0" length="18">
    $statusCode == 200
   <node name="logical-and-expr" index="0" length="18">
     $statusCode == 200
    <node name="comparison-expr" index="0" length="18">
      $statusCode == 200
     <node name="runtime-expression-operand" index="0" length="11">
       $statusCode
     </node><!-- name="runtime-expression-operand" -->
     <node name="comparison-op" index="12" length="2">
       ==
     </node><!-- name="comparison-op" -->
     <node name="number" index="15" length="3">
       200
     </node><!-- name="number" -->
    </node><!-- name="comparison-expr" -->
   </node><!-- name="logical-and-expr" -->
  </node><!-- name="logical-or-expr" -->
 </node><!-- name="condition" -->
</root>
"
`;
